--- a/src/main/resources/templates/cliente/dashboard.html
+++ b/src/main/resources/templates/cliente/dashboard.html
@@ -177,7 +177,7 @@
           <h5>Información y Ayuda</h5>
           <p>Ver políticas, contacto y detalles sobre alquiler.</p>
           <a
-            th:href="@{/cliente/dashboard}"
+            th:href="@{/cliente/info}"
             class="btn btn-outline-primary btn-sm action-btn"
             >Más Info</a
           >
